--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,40 @@
-.venv/
+# Python
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+*.py[cod]
+
+# Django
+db.sqlite3
+*.sqlite3
+/media/
+staticfiles/
+*.log
+
+# Environment
+.venv
+env/
+venv/
+
+# Node.js
+node_modules/
+npm-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Editor
+.vscode/
 .idea/
+*.swp
+*~
+
+# Build
+*.tmp
+*.bak
+*.pid
+*.seed
+*.lock
+
